[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "pycraigslist"
dist-name = "pycraigslist"
author = "Ira Horecka"
author-email = "ira89@icloud.com"
home-page = "https://github.com/irahorecka/pycraigslist"
description-file = "README.rst"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
requires-python = ">=3.6"
requires = ["httpx>=0.18.0", "beautifulsoup4>=4.9.0", "tenacity>=7.0.0", "cchardet>=2.1.0", "lxml>=4.6.0", "fake_headers>=1.0.2"]
