[metadata]
name = pycraigslist
version = attr: pycraigslist.__version__
author = Ira Horecka
author_email = ira89@icloud.com
summary = A simple and expressive Craigslist API wrapper
description-file = README.rst
home-page = https://github.com/irahorecka/pycraigslist
requires-dist = setuptools
license = MIT
license_file = LICENSE
platform = any
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries
    Topic :: Utilities
project_urls =
    Bug Tracker = https://github.com/irahorecka/pycraigslist/issues

[files]
packages =
    setup
    setup.cfg
    setup.cfg.extern
extra_files =
    LICENSE

[options]
zip_safe = false
python_requires = >=3.5
packages = find:
setup_requires =
    setuptools>=38.3.0
install_requires =
    requests>=2.25.0
    beautifulsoup4>=4.9.0
    tenacity>=7.0.0
    cchardet>=2.1.0
    lxml>=4.6.0

[bdist_wheel]
universal = true

[check]
metadata = true
restructuredtext = true
strict = true

[sdist]
formats = zip, gztar
